# tincture

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  params.json
src/: Config.h.in  main.cpp
